--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,10 @@
 <resources>
     <string name="app_name">Pregunta ESPOL</string>
+    <string name="form_title_materia">Materia</string>
+    <string name="form_title_titulo">Título</string>
+    <string name="form_title_descripcion">Descripción</string>
+    <string name="eliminar_btn">ELIMINAR</string>
+    <string name="editar_btn">EDITAR</string>
+    <string name="anuncio_placeholder"><b>Lugar:</b> Fiec Nueva Aula 204-5 \n<b>Hora:</b> 10:00 am - 14:00 pm </string>
+    <string name="info_placeholder">Fisica A - Hace 2 min</string>
 </resources>
