Arreglos en menu lateral

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,8 @@
     <string name="editar_btn">EDITAR</string>
     <string name="anuncio_placeholder"><b>Lugar:</b> Fiec Nueva Aula 204-5 \n<b>Hora:</b> 10:00 am - 14:00 pm </string>
     <string name="info_placeholder">Fisica A - Hace 2 min</string>
+    <string name="mis_preguntas">Mis Preguntas</string>
+    <string name="mis_respuestas">Mis Respuestas</string>
+    <string name="mis_recompensas">Mis Recompensas</string>
+    <string name="mis_anuncios">Mis Anuncios</string>
 </resources>
